; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/adns/src/extr_transmit.c_mkquery_header.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/adns/src/extr_transmit.c_mkquery_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32 }
%struct.TYPE_8__ = type { i64 }

@DNS_HDRSIZE = common dso_local global i64 0, align 8
@adns_s_nomemory = common dso_local global i32 0, align 4
@adns_s_ok = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_9__*, %struct.TYPE_8__*, i32*, i32)* @mkquery_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mkquery_header(%struct.TYPE_9__* %0, %struct.TYPE_8__* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_9__*, align 8
  %7 = alloca %struct.TYPE_8__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %6, align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %13 = load i64, i64* @DNS_HDRSIZE, align 8
  %14 = load i32, i32* %9, align 4
  %15 = sext i32 %14 to i64
  %16 = add nsw i64 %13, %15
  %17 = add nsw i64 %16, 4
  %18 = call i32 @adns__vbuf_ensure(%struct.TYPE_8__* %12, i64 %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %4
  %21 = load i32, i32* @adns_s_nomemory, align 4
  store i32 %21, i32* %5, align 4
  br label %44

22:                                               ; preds = %4
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %24 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %23, i32 0, i32 0
  store i64 0, i64* %24, align 8
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %26 = call i32 @MKQUERY_START(%struct.TYPE_8__* %25)
  %27 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %28 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %28, align 4
  %31 = and i32 %29, 65535
  store i32 %31, i32* %10, align 4
  %32 = load i32*, i32** %8, align 8
  store i32 %31, i32* %32, align 4
  %33 = load i32, i32* %10, align 4
  %34 = call i32 @MKQUERY_ADDW(i32 %33)
  %35 = call i32 @MKQUERY_ADDB(i32 1)
  %36 = call i32 @MKQUERY_ADDB(i32 0)
  %37 = call i32 @MKQUERY_ADDW(i32 1)
  %38 = call i32 @MKQUERY_ADDW(i32 0)
  %39 = call i32 @MKQUERY_ADDW(i32 0)
  %40 = call i32 @MKQUERY_ADDW(i32 0)
  %41 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %42 = call i32 @MKQUERY_STOP(%struct.TYPE_8__* %41)
  %43 = load i32, i32* @adns_s_ok, align 4
  store i32 %43, i32* %5, align 4
  br label %44

44:                                               ; preds = %22, %20
  %45 = load i32, i32* %5, align 4
  ret i32 %45
}

declare dso_local i32 @adns__vbuf_ensure(%struct.TYPE_8__*, i64) #1

declare dso_local i32 @MKQUERY_START(%struct.TYPE_8__*) #1

declare dso_local i32 @MKQUERY_ADDW(i32) #1

declare dso_local i32 @MKQUERY_ADDB(i32) #1

declare dso_local i32 @MKQUERY_STOP(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
